--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -3,30 +3,26 @@
 </div>
 
 <div class = "span7">
-<table class="table table-striped">
+<table class="table table-striped" id="devices">
   <thead>
     <tr>
-      <th>ID</th>
       <th>Brand</th>
       <th>Model</th>
       <th>Submodel</th>
       <th>Style</th>
-      <th>Created at</th>
       <th>Actions</th>
     </tr>
   </thead>
   <tbody>
     <% @styles.each do |style| %>
-      <tr>
-        <td><%= style.id %></td>
+      <tr id = "<%= style.id %>" >
         <td><%= style.submodel.model.brand.name %></td>
         <td><%= style.submodel.model.name %></td>
 				<td><%= style.submodel.name %></td>
-        <td><%= link_to style.name, style_path(style) %></td>
-        <td><%= style.created_at %></td>
+        <td><%= style.name %></td>
         <td>
           <%= link_to 'Edit', edit_style_path(style), :class => 'btn btn-mini' %>
-          <%= link_to 'Destroy', style_path(style), :method => :delete, :confirm => 'Are you sure?', :class => 'btn btn-mini btn-danger' %>
+          <%= link_to 'Destroy', style_path(style), :method => :delete, :class => 'btn btn-mini btn-danger' %>
         </td>
       </tr>
     <% end %>
