--- a/app/views/brands/new.js.erb
+++ b/app/views/brands/new.js.erb
@@ -13,7 +13,7 @@ $.ajax({
                 source.push(data[i]['name']);
             }
             $('#style_model_name').autocomplete({ source: source });
-            $('#icon1').append('<i class="icon-ok"></i>');
+            $('#icon1').append('<i class="icon-ok"></i>Brand found');
         }
     }
 });
