--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,14 +19,11 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </a>
-        <a class="brand" href="#">Some Store</a>
+        <a class="brand" href="#">Device Catalog</a>
         <div class="nav-collapse">
           <ul class="nav">
-            <li><%= link_to "Browse Products", styles_path %></li>
-            <li><%= link_to "Price List" %></li>
-            <li><%= link_to "Contact Us" %></li>
-            <li><%= link_to "Cart" %></li>
-          </ul>
+            <li><%= link_to "Browse Products", root_path %></li>
+            </ul>
         </div>
       </div>
     </div>
