--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -21,8 +21,7 @@
         <td><%= style.submodel.model.name %></td>
 				<td><%= style.submodel.name %></td>
         <td><%= style.generic %></td>
-        <td id = "style<%= style.id %>"><a><%= style.name %></a></td>
-        <script> $("#style<%= style.id %> > a").popover({title: 'Features', content: "<%= optcutter(style.options) %>", placement: "bottom"}); </script>
+        <td id = "style<%= style.id %>"><%= link_to(style.name, '#', :class => "pop_html", :title => "Features", "data-content" => optcutter(style.options)) %></td>
         <td>
           <%= link_to 'Edit', edit_style_path(style), :class => 'btn btn-mini' %>
           <%= link_to 'Destroy', style_path(style), :remote => true, :method => :delete, :class => 'btn btn-mini btn-danger' %>
@@ -33,8 +32,8 @@
 </table>
 
 <br />
-<a href="#" id="hello">hover over me</a>
 </div>
 
-
-
+<script>
+$('.pop_html').popover({ html : true });
+</script>
