--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -35,5 +35,5 @@
 </div>
 
 <script>
-$('.pop_html').popover({ html : true });
+$('.pop_html').popover({ html: true, placement: "bottom" });
 </script>
