--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -2,38 +2,8 @@
 <br /><%= render :partial => 'form2' %>
 </div>
 
-<div class = "span6">
-<table class="table table-condensed" id="devices">
-  <thead>
-    <tr>
-      <th>Brand</th>
-      <th>Model</th>
-      <th>Submodel</th>
-      <th>Style</th>
-      <th>Market Style</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @styles.each do |style| %>
-      <tr id = "<%= style.id %>" >
-        <td><%= style.submodel.model.brand.name %></td>
-        <td><%= style.submodel.model.name %></td>
-				<td><%= style.submodel.name %></td>
-        <td><%= style.generic %></td>
-        <td id = "style<%= style.id %>"><%= link_to(style.name, '#', :class => "pop_html", :title => "Features", "data-content" => optcutter(style.options)) %></td>
-        <td>
-          <%= link_to 'Edit', edit_style_path(style), :class => 'btn btn-mini' %>
-          <%= link_to 'Destroy', style_path(style), :remote => true, :method => :delete, :class => 'btn btn-mini btn-danger' %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
+<div class = "span6" id = "devicetable">
+<%= render :partial => 'devicetable' %>
 <br />
 </div>
 
-<script>
-$('.pop_html').popover({ html: true, placement: "bottom" });
-</script>
