changed table style

--- a/app/views/styles/_devicetable.html.erb
+++ b/app/views/styles/_devicetable.html.erb
@@ -1,6 +1,6 @@
 <% @styles = Style.all.reverse %>
 
-<table class="table table-condensed" id="devices">
+<table class="table table-striped" id="devices">
   <thead>
     <tr>
       <th>Brand</th>
