--- a/app/views/styles/_devicetable.html.erb
+++ b/app/views/styles/_devicetable.html.erb
@@ -1,8 +1,9 @@
-<% @styles = Style.all.reverse %>
+<% @styles = Style.all %>
 
 <table class="table table-striped" id="devices">
   <thead>
     <tr>
+    	<th>ID</th>
       <th>Brand</th>
       <th>Model</th>
       <th>Submodel</th>
@@ -14,6 +15,7 @@
   <tbody>
     <% @styles.each do |style| %>
       <tr id = "<%= style.id %>" >
+      	<td><%= style.id %></td>
         <td><%= style.submodel.model.brand.name %></td>
         <td><%= style.submodel.model.name %></td>
 				<td><%= style.submodel.name %></td>
@@ -32,7 +34,8 @@
 $('.pop_html').popover({ html: true, placement: "bottom" });    
 $('#devices').dataTable({
   "sDom": "<'row-fluid'<'span6'l><'span6'f>r>t<'row-fluid'<'span6'i><'span6'p>>",
-  "sPaginationType": "bootstrap"
+  "sPaginationType": "bootstrap",
+  "aaSorting": [[ 0, "desc" ]]
 });
 </script>
 
