added second page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,8 @@
         <a class="brand" href="#">Device Catalog</a>
         <div class="nav-collapse">
           <ul class="nav">
-            <li><%= link_to "Browse Products", root_path %></li>
+            <li><%= link_to "Browse Products", styles_path %></li>
+            <li><%= link_to "Create Products", root_path %></li>
             </ul>
         </div>
       </div>
