--- a/app/views/styles/index.html.erb
+++ b/app/views/styles/index.html.erb
@@ -1,8 +1,4 @@
-<div class = "well span5" id = "entryform">
-<br /><%= render :partial => 'form2' %>
-</div>
-
-<div class = "span6" id = "devicetable">
-<%= render :partial => 'devicetable' %>
+<div class = "span12" id = "devicetable">
+<%= render :partial => 'devicetable_full' %>
 <br />
 </div>
