--- a/app/views/styles/_form2.html.erb
+++ b/app/views/styles/_form2.html.erb
@@ -12,7 +12,7 @@
 		<%= m.input :dimage, :label => "Image" %>
     <div class="form-actions" style = "background:none">
       <%= m.submit nil, :class => 'btn btn-primary' %>
-      <%= link_to 'Cancel', brands_path, :class => 'btn' %>
+      <%= link_to 'Cancel', root_path, :class => 'btn' %>
     </div>
 
 <% end %>
